updated navbar and manager tables frontend

--- a/b-n-cafe/src/Components/Navbar.css
+++ b/b-n-cafe/src/Components/Navbar.css
@@ -1,13 +1,14 @@
 .navbar {
 background: linear-gradient(900deg, rgb(15, 14, 14) 0%, rgb(17, 16, 16) 75%);
-height: 80px;
+height: 120px;
 display: flex;
-justify-content: center;
+justify-content: right;
 align-items: center;
 font-size: 2rem;
 position: sticky;
 top: 0;
 z-index: 999;
+
 }
 
 .navbar-c {
@@ -16,6 +17,7 @@ justify-content: center;
 align-items: center;
 height: 80px;
 max-width: 1500px;
+margin-right: 25px;
 }
 
 .nav-menu {
@@ -24,25 +26,31 @@ grid-template-columns: repeat(4, auto);
 grid-gap: 5px;
 list-style: none;
 text-align: center;
-width: 60vw;
+margin-top: 25px;
+margin-bottom: 25px;
+
+
+
+/* width: 60vw; */
 /* justify-content: end; */
 /* margin-right: 2rem; */
 }
 
-.nav-item {
+/* changed */
+/* .nav-item {
 height: 80px;
 padding-left: 50px;
 padding-right: 50px;
-}
+} */
 
-.nav-links {
+/* .nav-links {
 color: #fff;
 display: flex;
 align-items: center;
 text-decoration: none;
 padding: 0.5rem 1rem;
 height: 100%;
-}
+} */
 
 .nav-links:hover {
 border-bottom: 4px solid #fff;
@@ -125,3 +133,100 @@ display: none;
     transition: 250ms;
 }
 }
+
+.Nav-button{
+    background-color: #006241;
+    border: none;
+    color: white;
+    width: 200px;
+    padding: 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px;
+    border-radius: 40px;
+
+  }
+  
+  .Nav-button a{
+    text-decoration: none;
+    color:#fff;
+    font-size: 20px;
+    letter-spacing:1px;
+    font-weight: 400;
+    padding:10px 20px;
+    position:relative;
+
+  }
+  .Nav-button a::after{
+    position: absolute;
+    content: '';
+    bottom: 5px;
+    left:0;
+    right:0;
+    width:100%;
+    height:2px;
+    background-color: #fff;
+    transition: all .8s ease;
+    border-radius:15px;
+  }
+  .Nav-button a:hover{
+    color: green;
+    z-index:1;
+    transition: all .8s ease;
+  }
+  
+  .Nav-button a:hover::after{
+    height: 80%;
+    z-index:-1;
+  }
+
+
+    .find-us-button{
+    background-color: white;
+    border: none;
+    color:black;
+    width: 200px;
+    padding: 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px;
+    border-radius: 40px;
+
+  }
+  
+  .find-us-button a{
+    text-decoration: none;
+    color:black;
+    font-size: 20px;
+    letter-spacing:1px;
+    font-weight: 400;
+    padding:10px 20px;
+    position:relative;
+
+  }
+  .find-us-button a::after{
+    position: absolute;
+    content: '';
+    bottom: 5px;
+    left:0;
+    right:0;
+    width:100%;
+    height:2px;
+    background-color:#006241;
+    transition: all .8s ease;
+    border-radius:15px;
+  }
+  .find-us-button a:hover{
+    color:white;
+    z-index:1;
+    transition: all .8s ease;
+  }
+  
+  .find-us-button a:hover::after{
+    height: 80%;
+    z-index:-1;
+  }
