--- a/b-n-cafe/src/Components/Navbar.css
+++ b/b-n-cafe/src/Components/Navbar.css
@@ -2,7 +2,7 @@
 background: linear-gradient(900deg, rgb(15, 14, 14) 0%, rgb(17, 16, 16) 75%);
 height: 120px;
 display: flex;
-justify-content: right;
+justify-content: center;
 align-items: center;
 font-size: 2rem;
 position: sticky;
@@ -18,30 +18,29 @@ align-items: center;
 height: 80px;
 max-width: 1500px;
 margin-right: 25px;
+
 }
 
 .nav-menu {
-display: grid;
-grid-template-columns: repeat(4, auto);
-grid-gap: 5px;
-list-style: none;
-text-align: center;
-margin-top: 25px;
-margin-bottom: 25px;
-
-
-
-/* width: 60vw; */
-/* justify-content: end; */
-/* margin-right: 2rem; */
+  display: grid;
+  grid-template-columns: repeat(5, auto);
+  grid-gap: 5px;
+  list-style: none;
+  text-align: center;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  /* width: 60vw; */
+  align-items: center;
+  margin: 2rem;
 }
 
+
 /* changed */
-/* .nav-item {
+.nav-item {
 height: 80px;
 padding-left: 50px;
 padding-right: 50px;
-} */
+}
 
 /* .nav-links {
 color: #fff;
@@ -84,6 +83,7 @@ display: none;
     left: -100%;
     opacity: 1;
     transition: all 0.5s ease;
+
 }
 
 .nav-menu.active {
@@ -92,6 +92,27 @@ display: none;
     opacity: 1;
     transition: all 0.5s ease;
     z-index: 1;
+}
+
+
+.nav-menu1{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 90vh;
+  position: absolute;
+  top: 80px;
+  left: -100%;
+  opacity: 1;
+  transition: all 0.5s ease;
+  align-items:right;
+}
+.nav-menu1.active {
+  background: #242222;
+  left: 0;
+  opacity: 1;
+  transition: all 0.5s ease;
+  z-index: 1;
 }
 
 .nav-links {
@@ -138,15 +159,14 @@ display: none;
     background-color: #006241;
     border: none;
     color: white;
-    width: 200px;
+    width: 270px;
     padding: 20px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin: 4px;
+    /* margin: 4px; */
     border-radius: 40px;
-
   }
   
   .Nav-button a{
@@ -157,7 +177,6 @@ display: none;
     font-weight: 400;
     padding:10px 20px;
     position:relative;
-
   }
   .Nav-button a::after{
     position: absolute;
@@ -187,7 +206,7 @@ display: none;
     background-color: white;
     border: none;
     color:black;
-    width: 200px;
+    width: 270px;
     padding: 20px;
     text-align: center;
     text-decoration: none;
