--- a/b-n-cafe/src/Pages_Login/Login.css
+++ b/b-n-cafe/src/Pages_Login/Login.css
@@ -29,6 +29,13 @@
     font-weight: 500;
     cursor: pointer;
 }
+.star-sign:hover{
+    background-color: rgb(0, 102, 53);
+    color: rgb(0, 0, 0);
+    font-size: 1.8rem;
+    font-weight: 500;
+    cursor: pointer;
+}
 
 .login_box{
     background-color: white;
@@ -53,7 +60,8 @@
 .logo{
     width: 30rem;
     height: 30rem;
-    margin-left: 2rem;
+    margin-left: 15rem;
+    margin-bottom: 5rem;
 }
 .box{
     display: inline-block;
