--- a/b-n-cafe/src/Pages_Register/Register.css
+++ b/b-n-cafe/src/Pages_Register/Register.css
@@ -1,4 +1,18 @@
 .background{
-    background: #000;
-    color: rgb(82, 234, 74);
+    background: rgb(0, 102, 53);
+    color: rgb(0, 0, 0);
+    width: 100%;
+    height: 100%;
+}
+.register{
+    width: 320px;
+    height: 420px;
+    background: rgb(0, 102, 53);
+
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    box-sizing: border-box;
+    padding: 70px 30px;
 }
