--- a/b-n-cafe/src/Pages_Staff/manager.css
+++ b/b-n-cafe/src/Pages_Staff/manager.css
@@ -1,3 +1,51 @@
-button{
-    color: green;
+.manager_Nav_center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding:30px;
 }
+.ManagerNav{
+    background-color: #006241;
+    border: none;
+    color: white;
+    width: 250px;
+    padding: 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px;
+    border-radius: 15px;
+  }
+  
+.ManagerNav a{
+    text-decoration: none;
+    color:#fff;
+    font-size: 20px;
+    letter-spacing:1px;
+    font-weight: 400;
+    padding:10px 20px;
+    position:relative;
+  }
+.ManagerNav a::after{
+    position: absolute;
+    content: '';
+    bottom: 5px;
+    left:0;
+    right:0;
+    width:100%;
+    height:2px;
+    background-color: #fff;
+    transition: all .8s ease;
+  }
+.ManagerNav a:hover{
+    color: green;
+    z-index:1;
+    transition: all .8s ease;
+  }
+  
+.ManagerNav a:hover::after{
+    height: 80%;
+    z-index:-1;
+  }
+  
