--- a/b-n-cafe/src/Main/App.css
+++ b/b-n-cafe/src/Main/App.css
@@ -4,3 +4,12 @@
   padding: 0;
   font-family: 'Nunito', sans-serif;
 }
+
+.class {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: #f5f5f5;
+}
