--- a/b-n-cafe/src/Pages_Customer/Menu.css
+++ b/b-n-cafe/src/Pages_Customer/Menu.css
@@ -48,7 +48,7 @@ hr.solid {
 .menu-title {
     text-align: center;
     text-transform: uppercase; /* lowercase, capitalize */
-    word-spacing: 10px;
+    /* word-spacing: 10px; */
     color:rgb(0, 83, 0);
     font-size: 80px;
     /* background-color:rgb(206, 204, 204); */
@@ -109,11 +109,8 @@ hr.solid {
 
 .menu-items {
     text-align: center;
-    max-width: 1200px;
-    width: 100%;
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
+    /* max-width: 1200px; */
+
 }
 
 .customize-container { /* Applied to each menu item */
@@ -212,9 +209,23 @@ hr.solid {
     padding-bottom: 25px;
     padding-left: 25px;
 }
+.order-item-picture{
+  text-align: center;
+  text-transform: uppercase; /* lowercase, capitalize */
+  word-spacing: 5px;
+  color:rgb(0, 83, 0);
+  font-size: 35px;
 
+  /* 2. Set the border */
+  /* border-style: hidden;
+  border-width: 100px; 20px 20px 20px 20px: top, right, bottom, left */
+/* border-radius: 25px; Makes the border rounded */
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 150px;
+}
 .order-item-name {
-    text-align: center;
+    text-align: left;
     text-transform: uppercase; /* lowercase, capitalize */
     word-spacing: 5px;
     color:rgb(0, 83, 0);
@@ -228,55 +239,58 @@ hr.solid {
     padding-bottom: 20px;
     padding-left: 150px;
 }
+h3{
+  text-align: center;
+}
+
 
 .order-customize-name {
-    text-align: center;
-    text-transform: uppercase; /* lowercase, capitalize */
-    word-spacing: 5px;
-    color:rgb(0, 83, 0);
-    font-size: 20px;
+  text-align: left;
+  text-transform: uppercase; /* lowercase, capitalize */
+  word-spacing: 5px;
+  color:rgb(0, 83, 0);
+  font-size: 35px;
 
-    /* 2. Set the border */
-    /* border-style: hidden;
-    border-width: 100px; 20px 20px 20px 20px: top, right, bottom, left */
-  /* border-radius: 25px; Makes the border rounded */
-    /* padding-top: 20px;
-    padding-bottom: 20px; */
-    padding-left: 485px;
+  /* 2. Set the border */
+  /* border-style: hidden;
+  border-width: 100px; 20px 20px 20px 20px: top, right, bottom, left */
+/* border-radius: 25px; Makes the border rounded */
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 150px;
+    
 }
 
 .order-totals {
-    text-align: center;
-    text-transform: uppercase; /* lowercase, capitalize */
-    word-spacing: 5px;
-    color:rgb(0, 83, 0);
-    font-size: 20px;
+  text-align: left;
+  text-transform: uppercase; /* lowercase, capitalize */
+  word-spacing: 5px;
+  color:rgb(0, 83, 0);
+  font-size: 35px;
 
-    /* 2. Set the border */
-    /* border-style: hidden;
-    border-width: 100px; 20px 20px 20px 20px: top, right, bottom, left */
-  /* border-radius: 25px; Makes the border rounded */
-    /* padding-top: 20px; */
-    /* padding-bottom: 20px; */
-    padding-left: 180px;
-    padding-right: 1125px;
+  /* 2. Set the border */
+  /* border-style: hidden;
+  border-width: 100px; 20px 20px 20px 20px: top, right, bottom, left */
+/* border-radius: 25px; Makes the border rounded */
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 150px;
 }
 
 .order-big-total {
-    text-align: center;
-    text-transform: uppercase; /* lowercase, capitalize */
-    word-spacing: 5px;
-    color:rgb(0, 83, 0);
-    font-size: 35px;
+  text-align: left;
+  text-transform: uppercase; /* lowercase, capitalize */
+  word-spacing: 5px;
+  color:rgb(0, 83, 0);
+  font-size: 35px;
 
-    /* 2. Set the border */
-    /* border-style: hidden;
-    border-width: 100px; 20px 20px 20px 20px: top, right, bottom, left */
-  /* border-radius: 25px; Makes the border rounded */
-    padding-top: 20px; 
-    padding-bottom: 20px;
-    padding-left: 180px;
-    padding-right: 1125px;
+  /* 2. Set the border */
+  /* border-style: hidden;
+  border-width: 100px; 20px 20px 20px 20px: top, right, bottom, left */
+/* border-radius: 25px; Makes the border rounded */
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 150px;
 }
 
 .end-text {
@@ -308,6 +322,8 @@ hr.solid {
   font-size: 16px;
   /* margin: 4px; */
   border-radius: 40px;
+  justify-content: center;
+  align-items: center;
 }
 .menu-button a{
   text-decoration: none;
@@ -317,4 +333,9 @@ hr.solid {
   font-weight: 400;
   padding:10px 20px;
   position:relative;
+}
+
+.menu-items {
+  justify-content: center;
+
 }
