--- a/b-n-cafe/src/Pages_Customer/Menu.css
+++ b/b-n-cafe/src/Pages_Customer/Menu.css
@@ -3,8 +3,6 @@
   --green:#006241;
 }
 
-
-
 * {
     box-sizing: border-box;
     content: width=device-width, initial-scale=1.0;
@@ -42,7 +40,6 @@ img {
     margin-left: auto;
     margin-right: auto;
     max-width: 100%;
-    padding-top: 50px;
     /* width: 150px; */
 }
 /* Solid border */
@@ -56,8 +53,9 @@ hr.solid {
     text-align: center;
     text-transform: uppercase; /* lowercase, capitalize */
     /* word-spacing: 10px; */
-    color:rgb(0, 83, 0);
+    color:var(--green);
     font-size: 80px;
+    font-weight: 200;
     /* background-color:rgb(206, 204, 204); */
 
     /* 2. Set the border */
@@ -118,9 +116,7 @@ hr.solid {
     text-align: center;
     margin-left:10%;
     margin-right:10%;
-
     /* max-width: 1200px; */
-
 }
 
 .customize-container { /* Applied to each menu item */
@@ -159,7 +155,7 @@ hr.solid {
     text-align: center;
     text-transform: uppercase; /* lowercase, capitalize */
     word-spacing: 5px;
-    color:rgb(0, 83, 0);
+    color:var(--green);
     font-size: 35px;
 
     /* 2. Set the border */
@@ -175,7 +171,7 @@ hr.solid {
     text-align: center;
     text-transform: uppercase; /* lowercase, capitalize */
     word-spacing: 5px;
-    color:rgb(0, 83, 0);
+    color:var(--green);
     padding: 20px 150px 20px 150px;
     /* font-size: 80px; */
 
@@ -223,7 +219,7 @@ hr.solid {
   text-align: center;
   text-transform: uppercase; /* lowercase, capitalize */
   word-spacing: 5px;
-  color:rgb(0, 83, 0);
+  color:var(--green);
   font-size: 35px;
 
   /* 2. Set the border */
@@ -250,7 +246,13 @@ hr.solid {
 }
 h3{
   text-align: center;
+  font-weight: 100;
 }
+h2{
+  text-align: center;
+  font-weight: 100;
+}
+
 
 
 .order-customize-name {
@@ -306,9 +308,9 @@ h3{
     text-align: justify;
     /* text-transform: uppercase; lowercase, capitalize */
     word-spacing: 5px;
-    color:rgb(0, 83, 0);
+    color:var(--green);
     font-size: 35px;
-
+    font-weight: 100;
     /* 2. Set the border */
     /* border-style: hidden;
     border-width: 100px; 20px 20px 20px 20px: top, right, bottom, left */
@@ -333,6 +335,7 @@ h3{
   border-radius: 40px;
   justify-content: center;
   align-items: center;
+  margin-bottom: 12px;
 }
 .menu-button a{
   text-decoration: none;
@@ -350,4 +353,70 @@ h3{
 .warp-myorder{
   justify-content: center;
   align-items: center;
+}
+
+
+.size-button{
+  background-color: #006241;
+  border-color:var(--green);
+  color: white;
+  width: 270px;
+  padding: 20px;
+  text-decoration: none;
+  font-size: 16px;
+  /* margin: 4px; */
+  border-radius: 40px;
+  margin:10px ;
+}
+
+.size-button :hover{
+  z-index:1;
+  transition: all .8s ease;
+  background-color: #b7c2be;
+
+}
+
+.size-button:hover::after{
+  height: 80%;
+  z-index:-1;
+  background-color: #cef5e8;
+}
+
+
+.button-size-display{
+  display: grid;
+  justify-content: center;
+}
+
+
+.drink-img img{
+  border-radius: 90%;
+}
+
+.add-button{
+  width: 150px;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  /* margin: 4px; */
+  border: 2px solid black;
+  border-radius: 40px;
+  justify-content: center;
+  align-items: center;
+}
+.add-button a{
+  text-decoration: none;
+  color:black;
+  font-size: 20px;
+  letter-spacing:1px;
+  font-weight: 400;
+  padding:10px 20px;
+  position:relative;
+}
+
+.drink-img h1{
+  font-family: 'Nunito', sans-serif;
+  font-weight: 100;
 }
