--- a/b-n-cafe/src/Components/Navbar.css
+++ b/b-n-cafe/src/Components/Navbar.css
@@ -1,13 +1,18 @@
 .navbar {
 background: linear-gradient(900deg, rgb(15, 14, 14) 0%, rgb(17, 16, 16) 75%);
-height: 80px;
+/* height: 120px;
 display: flex;
 justify-content: center;
 align-items: center;
 font-size: 2rem;
-position: sticky;
 top: 0;
-z-index: 999;
+z-index: 999; */
+display: flex;
+justify-content: center;
+align-items: center;
+padding:30px;
+position: sticky;
+
 }
 
 .navbar-c {
@@ -16,33 +21,39 @@ justify-content: center;
 align-items: center;
 height: 80px;
 max-width: 1500px;
+margin-right: 25px;
+
 }
 
 .nav-menu {
 display: grid;
-grid-template-columns: repeat(4, auto);
+grid-template-columns: repeat(5, auto);
 grid-gap: 5px;
 list-style: none;
 text-align: center;
-width: 60vw;
-/* justify-content: end; */
-/* margin-right: 2rem; */
+margin-top: 25px;
+margin-bottom: 25px;
+/* width: 60vw; */
+align-items: center;
+margin: 2rem;
 }
 
+
+/* changed */
 .nav-item {
 height: 80px;
 padding-left: 50px;
 padding-right: 50px;
 }
 
-.nav-links {
+/* .nav-links {
 color: #fff;
 display: flex;
 align-items: center;
 text-decoration: none;
 padding: 0.5rem 1rem;
 height: 100%;
-}
+} */
 
 .nav-links:hover {
 border-bottom: 4px solid #fff;
@@ -76,6 +87,7 @@ display: none;
     left: -100%;
     opacity: 1;
     transition: all 0.5s ease;
+
 }
 
 .nav-menu.active {
@@ -84,6 +96,27 @@ display: none;
     opacity: 1;
     transition: all 0.5s ease;
     z-index: 1;
+}
+
+
+.nav-menu1{
+display: flex;
+flex-direction: column;
+width: 100%;
+height: 90vh;
+position: absolute;
+top: 80px;
+left: -100%;
+opacity: 1;
+transition: all 0.5s ease;
+align-items:right;
+}
+.nav-menu1.active {
+background: #242222;
+left: 0;
+opacity: 1;
+transition: all 0.5s ease;
+z-index: 1;
 }
 
 .nav-links {
@@ -124,4 +157,99 @@ display: none;
     color: #242424;
     transition: 250ms;
 }
+}
+
+.Nav-button{
+    background-color: #006241;
+    border: none;
+    color: white;
+    width: 270px;
+    padding: 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    /* margin: 4px; */
+    border-radius: 40px;
+}
+
+.Nav-button a{
+    text-decoration: none;
+    color:#fff;
+    font-size: 20px;
+    letter-spacing:1px;
+    font-weight: 400;
+    padding:10px 20px;
+    position:relative;
+}
+.Nav-button a::after{
+    position: absolute;
+    content: '';
+    bottom: 5px;
+    left:0;
+    right:0;
+    width:100%;
+    height:2px;
+    background-color: #fff;
+    transition: all .8s ease;
+    border-radius:15px;
+}
+.Nav-button a:hover{
+    color: green;
+    z-index:1;
+    transition: all .8s ease;
+}
+
+.Nav-button a:hover::after{
+    height: 80%;
+    z-index:-1;
+}
+
+
+    .find-us-button{
+    background-color: white;
+    border: none;
+    color:black;
+    width: 270px;
+    padding: 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px;
+    border-radius: 40px;
+
+}
+
+.find-us-button a{
+    text-decoration: none;
+    color:black;
+    font-size: 20px;
+    letter-spacing:1px;
+    font-weight: 400;
+    padding:10px 20px;
+    position:relative;
+
+}
+.find-us-button a::after{
+    position: absolute;
+    content: '';
+    bottom: 5px;
+    left:0;
+    right:0;
+    width:100%;
+    height:2px;
+    background-color:#006241;
+    transition: all .8s ease;
+    border-radius:15px;
+}
+.find-us-button a:hover{
+    color:white;
+    z-index:1;
+    transition: all .8s ease;
+}
+
+.find-us-button a:hover::after{
+    height: 80%;
+    z-index:-1;
 }
