--- a/b-n-cafe/src/Main/Login.css
+++ b/b-n-cafe/src/Main/Login.css
@@ -38,9 +38,10 @@
     font-weight: 500;
 }
 .logo{
-    width: 30rem;
+    /* width: 30rem;
     height: 30rem;
-    margin-left: 2rem;
+    margin-left: 2rem; */
+    margin:auto;
 }
 .box{
     display: inline-block;
