--- a/b-n-cafe/src/Pages_Customer/Menu.css
+++ b/b-n-cafe/src/Pages_Customer/Menu.css
@@ -116,6 +116,7 @@ hr.solid {
     text-align: center;
     margin-left:10%;
     margin-right:10%;
+    margin-bottom: 12px;
     /* max-width: 1200px; */
 }
 
@@ -419,4 +420,37 @@ h2{
 .drink-img h1{
   font-family: 'Nunito', sans-serif;
   font-weight: 100;
+}
+
+.add-button{
+  width: 150px;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  /* margin: 4px; */
+  border: 2px solid black;
+  border-radius: 40px;
+  justify-content: center;
+  align-items: center;
+}
+
+.con-checkoout-button{
+  width: 150px;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  /* margin: 4px; */
+  border: 2px solid black;
+  border-radius: 40px;
+  justify-content: center;
+  align-items: center;
+
+}
+h1{
+  font-family: 100;
+
 }
