--- a/b-n-cafe/src/Pages_Login/Login.css
+++ b/b-n-cafe/src/Pages_Login/Login.css
@@ -2,12 +2,14 @@
     --green: #006241;
 }
 
+
 *{
     font-family: 'Nunito', sans-serif;
 }
 
 .background{
     /* background-color: var(--green); */
+    background-color: rgb(0,102,53);
     height: 100%;
     
 }
@@ -50,7 +52,7 @@
     grid-column: 2;
 }
 .header{
-    /* background-color: rgb(0, 102, 53); */
+    background-color: rgb(0, 102, 53);
     color:var(--green);
     font-size: 30px;
     font-weight: bold;
@@ -115,3 +117,4 @@
     padding: 10px 20px;
     position: relative;
 }
+
